# Big-Data-Labs

./: Lab7_LLM_Groq.ipynb  README.md
Lab 1/: README.MD
Lab 1/pe-orgair-platform/: pyproject.toml
Lab 1/pe-orgair-platform/scripts/: app.py
Lab 1/pe-orgair-platform/src/pe_orgair/api/routes/v2/: __init__.py
Lab 1/pe-orgair-platform/src/pe_orgair/models/: items.py
Lab 2/: README.MD  README.md
Lab 2/pe-orgair-platform/: .env  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
Lab 2/pe-orgair-platform-lab2/: README.md  docker-compose.yml  pyproject.toml
Lab 2/pe-orgair-platform-lab2/migrations/versions/: 1051e1dc5d14_dataseeding.py
Lab 2/pe-orgair-platform-lab2/src/pe_orgair/api/: main.py
Lab 2/pe-orgair-platform/migrations/versions/: 966084fbdd5b_create_sample_table.py
Lab 2/pe-orgair-platform/src/pe_orgair/api/: main.py
Lab 4/pe-orgair-platform-lab4/: .env  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
Lab 4/pe-orgair-platform-lab4/config/: airflow.cfg
Lab 4/pe-orgair-platform-lab4/migrations/versions/: 1051e1dc5d14_dataseeding.py  33bc3ac511fb_create_sample_table.py  9c00574219b6_create_base_tables.py
